--- a/infra/docker/nginx/conf.d/default.conf
+++ b/infra/docker/nginx/conf.d/default.conf
@@ -1,13 +1,13 @@
 server {
     listen 8080;
     server_name  localhost;
-    root         /var/www/html;
+    root         /var/www/backend/public;
 
     #charset koi8-r;
     #access_log  /var/log/nginx/host.access.log  main;
 
     location / {
-        root   /var/www/html;
+        root   /var/www/backend/public;
         index  index.php index.html index.htm;
     }
 
@@ -29,7 +29,7 @@ server {
     # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
     #
     location ~ \.php$ {
-        root           /var/www/html;
+        root           /var/www/backend/public;
         fastcgi_pass   unix:/var/run/php-fpm/php7-fpm.sock;
         fastcgi_index  index.php;
         fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
